--- a/Integrated/public/index.html
+++ b/Integrated/public/index.html
@@ -27,6 +27,7 @@
         }
     </style>
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 
     <title>Course Recommender</title>
 </head>
@@ -103,9 +104,17 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+
 
         <!-- Our Code, Must go before due to the jQuery requirements -->
         <script src="js/main.js"></script>
+
+        <script>
+            $(document).ready(function () {
+                $('#selectCourses').select2();
+            });
+        </script>
     </body>
 
 </html>
