--- a/Integrated/public/index.html
+++ b/Integrated/public/index.html
@@ -66,6 +66,7 @@
                             </select>
                         </li>
                         <li class="list-group-item text-center" id="studentCPI"></li>
+                        <li class="list-group-item text-center" id="studentRollNo"></li>
                         <li class="list-group-item text-center">
                             <select id="studentBranchLikeOne" class="custom-select mt-2">
                                 <option disabled selected>Please select a branch...</option>
